--- a/index.html
+++ b/index.html
@@ -9,30 +9,28 @@
     <title>La Liga site</title>
 </head>
 <body>
-    <header class="wrapper">
-        <div class="container">
+    <header class="wrapper">        
             <div class="header-titile">
-                <div class="half-width">
+                <div class="half-width text">
                     <h1>Campeonato Nacional de Liga de Primera División</h1>
                     <p>commonly known simply as Primera División in Spain, and as La Liga in English-speaking countries and officially as LaLiga Santander for sponsorship reasons, stylized as LaLiga, is the men's top professional football division of the Spanish football league system</p>
                     <button class="live-button">Watch Live <i class="fa-solid fa-angle-right"></i></button>
                 </div>
-                <div class="half-width">
+                <div class="half-width imge">
                    <img src="image/banner vj.png" alt="">
                 </div>
             </div>
-        </div>
     </header>
 <div class="main-wrapper">
     <div class="sidebar">
         <div class="side-button">
-            <a href="">Match</a>
+            <a href="fixure.html">Match</a>
         </div>
         <div class="side-button">
             <a href="">All Team</a> 
         </div>
         <div class="side-button textex">
-            <a href="">Blog</a> 
+            <a href="index.html">Blog</a> 
         </div>
     </div>
      <main>
