--- a/fixure.html
+++ b/fixure.html
@@ -36,18 +36,88 @@
      <main>
         <section>
             <div class="matches">
-                        <div class="container">
-                            <img src="image/germany Flag.png" alt="">
-                        </div>
-                        <div class="container">
-                            vs
-                        </div>
-                        <div class="container">
-                            <img src="image/Flag.png" alt="">
-                        </div>        
-                    <div>
-                        <h4 class="match-summary">Germany vs France</h4>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
                     </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                <div class="match shadow">
+                    <div class="match-banner">
+                        <img src="image/BARCA.jpg" alt="">
+                    </div>
+                    <div class="transfer">
+                        <button class="transfer-button">Match Time 12:30 AM</button>
+                        <h4 class="match-title">Real Madrid is going head to head with Barcelona starting on 24 Jul 2022</h4>
+                    </div>
+                </div>
+                
             </div>
         </section>
      </main>
