--- a/fixure.html
+++ b/fixure.html
@@ -123,7 +123,7 @@
      </main>
 </div>
 <footer>
-    <h2>Goal</h2>
+    <h2>La Liga</h2>
     <hr>
     <div class="Goal">
         <a href="">Contact Us</a>
@@ -144,11 +144,10 @@
             <a href="">Goal Live</a>
         </div>
         <div class="social-link">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram link"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook link"></i></a>
+            <a href="https://www.youtube.com/channel/UCj-Nl-Wk3nnVP9dsmr6HOxQ"><i class="fa-brands fa-youtube link"></i></a>
         </div>
-    
   </footer>
   
 </body>
