--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -55,7 +55,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -85,7 +85,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -100,7 +100,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -115,7 +115,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -130,7 +130,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -145,7 +145,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -160,7 +160,7 @@
                     <div class="match-banner">
                         <img src="image/blog image 2.jpg" alt="">
                     </div>
-                    <div class="transfer-button">
+                    <div class="transfer">
                         <button>Match Time</button>
                         <h4 class="match-title">As of the end of season 2020–21, the ranking of Spain (and de facto La Liga) is second.</h4>
                     </div>
@@ -177,7 +177,7 @@
      </main>
 </div>
 <footer>
-    <h2>Goal</h2>
+    <h2>La Liga</h2>
     <hr>
     <div class="Goal">
         <a href="">Contact Us</a>
@@ -198,9 +198,9 @@
             <a href="">Goal Live</a>
         </div>
         <div class="social-link">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram link"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook link"></i></a>
+            <a href="https://www.youtube.com/channel/UCj-Nl-Wk3nnVP9dsmr6HOxQ"><i class="fa-brands fa-youtube link"></i></a>
         </div>
     
   </footer>
